# portaki-modules-rust

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release-please-config.json  renovate.json
.cargo/: config.toml
.cursor/rules/: rustfmt.mdc
.github/: BRANCH_POLICY.md  CI.md
.github/scripts/: changed-modules.sh  configure-repo-rulesets.mjs  publish-module.sh
.github/workflows/: ci.yml  make-module-packages-public.yml  release-please.yml  release.yml
docs/: module-layout.md
modules/access-guide/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/access-guide/i18n/: en-US.json  fr-FR.json
modules/access-guide/src/: commands.rs  config.rs  email_context.rs  ids.rs  lib.rs  queries.rs  render_host.rs  reveal.rs  texts.rs
modules/access-guide/src/guest/: body.rs  detail.rs  empty.rs  home.rs  load.rs
modules/access-guide/src/host/: mod.rs
modules/access-guide/tests/: integration.rs
modules/appliances/: Cargo.toml  README.md  portaki.module.json
modules/appliances/db/migrations/: 20260716120000_v1_appliances_content.sql
modules/appliances/i18n/: en-US.json  fr-FR.json
modules/appliances/src/: commands.rs  content.rs  entities.rs  ids.rs  lib.rs  queries.rs  render_host.rs  store.rs
modules/appliances/src/guest/: empty.rs  home.rs  item.rs  mod.rs  page.rs
modules/appliances/src/host/: mod.rs
modules/appliances/tests/: integration.rs
modules/checklist/: Cargo.toml  README.md
modules/checklist/db/migrations/: 20260716180000_v1_checklist.sql
modules/checklist/i18n/: en-US.json  fr-FR.json
modules/checklist/src/: commands.rs  email_context.rs  entities.rs  ids.rs  labels.rs  lib.rs  queries.rs  render_host.rs  storage.rs
modules/checklist/src/guest/: empty.rs  home.rs  load.rs  mod.rs
modules/checklist/src/host/: mod.rs
modules/checklist/tests/: integration.rs
modules/emergency-contacts/: Cargo.toml  README.md
modules/emergency-contacts/i18n/: en-US.json  fr-FR.json
modules/emergency-contacts/src/: commands.rs  config.rs  email_context.rs  ids.rs  lib.rs  localized.rs  queries.rs  render_host.rs
modules/emergency-contacts/tests/: integration.rs
modules/ev-parking/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/ev-parking/i18n/: en-US.json  fr-FR.json
modules/ev-parking/src/: commands.rs  config.rs  email_context.rs  ids.rs  lib.rs  reveal.rs
modules/ev-parking/tests/: integration.rs
modules/events/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/events/i18n/: en-US.json  fr-FR.json
modules/events/src/: commands.rs  config.rs  email_context.rs  ids.rs  lib.rs  time_format.rs
modules/events/tests/: integration.rs
modules/facility-hours/: Cargo.toml  README.md  build.rs
modules/facility-hours/i18n/: en-US.json  fr-FR.json
modules/facility-hours/src/: commands.rs  config.rs  ids.rs  lib.rs  localized.rs  render_host.rs
modules/facility-hours/src/guest/: body.rs  detail.rs  empty.rs  home.rs  load.rs  mod.rs
modules/facility-hours/src/host/: mod.rs
modules/facility-hours/tests/: integration.rs
modules/guest-reviews/: Cargo.toml  README.md
modules/guest-reviews/.cargo/: config.toml
modules/guest-reviews/i18n/: en-US.json  fr-FR.json
modules/guest-reviews/src/: commands.rs  config.rs  ids.rs  lib.rs  render_host.rs
modules/guest-reviews/tests/: integration.rs
modules/ical-sync/: CHANGELOG.md  README.md  portaki.module.json
modules/ical-sync/i18n/: en-US.json  fr-FR.json
modules/ical-sync/src/: commands.rs  config.rs  ics.rs  ids.rs  lib.rs  queries.rs
modules/ical-sync/tests/: integration.rs
modules/issue-report/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/issue-report/db/migrations/: 20260723160000_v1_issue_report.sql
modules/issue-report/i18n/: en-US.json  fr-FR.json
modules/issue-report/src/: category.rs  commands.rs  entities.rs  ids.rs  lib.rs  queries.rs  storage.rs
modules/issue-report/src/guest/: empty.rs  home.rs  load.rs  mod.rs
modules/issue-report/src/host/: mod.rs
modules/issue-report/tests/: integration.rs
modules/local-guide/: Cargo.toml  README.md
modules/local-guide/i18n/: en-US.json  fr-FR.json
modules/local-guide/src/: commands.rs  config.rs  email_context.rs  ids.rs  lib.rs  render_host.rs
modules/local-guide/tests/: integration.rs
modules/lost-found/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/lost-found/i18n/: en-US.json  fr-FR.json
modules/lost-found/src/: ids.rs  (+11 more)
modules/nuki/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/pre-arrival-form/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/pre-arrival-form/db/migrations/: 20260716180000_v1_pre_arrival_response.sql
modules/pre-arrival-form/i18n/: en-US.json  fr-FR.json
modules/pre-arrival-form/src/: commands.rs  entities.rs  ids.rs  lib.rs  queries.rs  render_host.rs  storage.rs
modules/pre-arrival-form/src/guest/: empty.rs  home.rs  load.rs  mod.rs
modules/pre-arrival-form/src/host/: main.rs  mod.rs  stay.rs
modules/pre-arrival-form/tests/: integration.rs
modules/rules/: Cargo.toml  README.md  portaki.module.json
modules/sections/: Cargo.toml  README.md  portaki.module.json
modules/train/: portaki.module.json
modules/waste-recycling/: Cargo.toml  README.md
modules/weather/: Cargo.toml  README.md  portaki.module.json
modules/weather/.cargo/: config.toml
modules/weather/i18n/: en-US.json  fr-FR.json
modules/weather/src/: cache.rs  commands.rs  config.rs  connectors.rs  email_context.rs  entities.rs  events.rs  ids.rs  lib.rs  queries.rs  render_guest.rs  render_host.rs  weather.rs
modules/weather/src/guest/: body.rs  components.rs  details.rs  empty.rs  home.rs  load.rs  mod.rs  sheet.rs  table.rs
modules/weather/src/host/: mod.rs
modules/weather/src/weather/: api.rs  condition.rs  format.rs  mod.rs  model.rs
modules/weather/tests/: integration.rs
modules/wifi-guest/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
scripts/: generate-release-please-config.sh
(+126 files in other folders)
