[workspace]
resolver = "2"
members = ["modules/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PortakiApp/portaki-modules-rust"
authors = ["Syntax Labs <support@syntax-labs.fr>"]
rust-version = "1.75"

[workspace.dependencies]
portaki-sdk = { git = "https://github.com/PortakiApp/portaki-sdk-rust.git", branch = "main" }
portaki-sdk-macros = { git = "https://github.com/PortakiApp/portaki-sdk-rust.git", branch = "main" }
portaki-connectors = { git = "https://github.com/PortakiApp/portaki-sdk-rust.git", branch = "main" }
portaki-test-utils = { git = "https://github.com/PortakiApp/portaki-sdk-rust.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "rng-getrandom"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
serial_test = "3"
extism-pdk = "1.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
