[workspace]
resolver = "2"
members = ["modules/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PortakiApp/portaki-modules"
homepage = "https://portaki.app"
documentation = "https://github.com/PortakiApp/portaki-modules#readme"
readme = "README.md"
authors = ["Syntax Labs <support@syntax-labs.fr>"]
categories = ["wasm"]
keywords = ["portaki", "wasm", "extism", "oci", "module"]
rust-version = "1.75"

[workspace.dependencies]
portaki-sdk = { path = "../portaki-sdk/crates/portaki-sdk" }
portaki-sdk-macros = { path = "../portaki-sdk/crates/portaki-sdk-macros" }
portaki-connectors = { path = "../portaki-sdk/crates/portaki-connectors" }
portaki-test-utils = { path = "../portaki-sdk/crates/portaki-test-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "rng-getrandom"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
serial_test = "3"
extism-pdk = "1.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
