[package]
name = "access-guide"
version = "0.2.3"
edition.workspace = true
license.workspace = true
description = "Portaki access guide module — arrival steps, codes, and parking"
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
portaki-sdk = { workspace = true }
portaki-sdk-macros = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = { workspace = true }

[dev-dependencies]
portaki-test-utils = { workspace = true }
serial_test = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
