[package]
name = "appliances"
version = "0.2.2"
edition.workspace = true
license.workspace = true
description = "Portaki appliances module — device guides and safety notice for guests"
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
portaki-sdk = { workspace = true }
portaki-sdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = { workspace = true }

[dev-dependencies]
portaki-test-utils = { workspace = true }
serial_test = { workspace = true }
