[package]
name = "weather"
version = "0.2.3"
edition.workspace = true
license.workspace = true
description = "Portaki weather module — current conditions and 5-day forecast"
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
portaki-sdk = { workspace = true }
portaki-connectors = { workspace = true }
portaki-sdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = { workspace = true }

[dev-dependencies]
portaki-test-utils = { workspace = true }
serial_test = { workspace = true }
